--- a/Web/build.gradle
+++ b/Web/build.gradle
@@ -8,9 +8,6 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven {
-        url "http://uk.maven.org/maven2"
-    }
 }
 
 dependencies {
@@ -21,14 +18,14 @@ dependencies {
     compile 'org.glassfish.jersey.core:jersey-client:2.26-b03'
     compile 'org.glassfish.jersey.core:jersey-server:2.26-b03'
     // servlet 容器
-    compile 'org.glassfish.jersey.core:containers:jersey-container-servlet:2.26-b03'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.26-b03'
     // jackson 库
-    compile 'org.glassfish.jersey.core:media:jersey-media-json-jackson:2.26-b03'
+    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.26-b03'
     //数据库操作框架
     compile 'org.hibernate:hibernate-core:5.2.9.Final'
     compile 'org.hibernate:hibernate-entitymanager:5.2.9.Final'
     compile 'org.hibernate:hibernate-c3p0:5.2.9.Final'
     // MySQL 依赖
-    compile group: 'mysql',name: 'mysql-connector-java',version: '6.0.6'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
